--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ idna==2.10
 ipykernel==5.5.3
 ipython==7.23.0
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==2.11.3
 joblib==1.0.1
@@ -35,6 +36,7 @@ jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
@@ -101,4 +103,5 @@ urllib3==1.26.5
 wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
